--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^4.0.3
   shared_preferences: ^2.0.8
   fluttertoast: ^8.0.8
+  provider: ^6.0.1
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
