--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.0.8
   provider: ^6.0.1
   flutter_secure_storage: ^5.0.2
+  camera: ^0.9.4+5
 
 dev_dependencies:
   flutter_test:
