--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.1
   flutter_secure_storage: ^5.0.2
   camera: ^0.9.4+5
+  # wakelock: ^0.1.4+1
 
 dev_dependencies:
   flutter_test:
